# citoer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  run.yml
src/: main.rs
src/adapters/: google_sheets.rs  mod.rs
src/media_adapters/: mod.rs  slack.rs
src/storage_adapters/: google_sheets.rs  mod.rs
