[package]
name = "citoer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.45"
dotenv = "0.15.0"
google-sheets4 = "7.0.0"
hyper = "1.10.1"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["query", "json"] }
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = "1.52.3"
yup-oauth2 = "12.1.2"
